# ESG_Projektpraktikum

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: index.md  ml_approaches.md  project_structure.md
docs/config/: data_column_reference.md
docs/data_dictionaries/: company_emissions_data.md  index.md  programs1_data.md  programs2_data.md  targets_data.md
docs/fastai/: tabular_learner_guide.md
docs/fastai/developer/: abbreviations.md  coding_style.md  git_notes.md  gpu_notes.md
docs/fastai/tabular/: Collaborative_filtering.html  Collaborative_filtering.txt  Tabular_core.html  Tabular_data.html  Tabular_learner.html  Tabular_model.html
docs/project/: project_structure_detailed.md
output/program_focused_analysis/: analysis_summary.txt  program_focused_model.txt
output/reports/: advanced_esg_analysis.md  comprehensive_analysis_results.json  programs_combined_detailed.md
output/summary/others/: gbm_industry_results_summary.txt  program_focused_analysis_summary.txt  program_focused_model.txt
reports/: 03_programs1_detailed_analysis.md  04_programs2_detailed_analysis.md  05_programs_combined_detailed_analysis.md  06_advanced_esg_analysis.md  07_additional_esg_insights.md  08_comprehensive_esg_insights.md  09_program_sequencing_analysis.md  10_association_rule_analysis.md  11_overall_findings.md  emissions_data_overview.md  esg_ml_analysis_plan.md  esg_ml_model_summary.md  program_focused_analysis_findings.md  programs2_detailed_analysis.md
reports/main_report/: esg_report_fixed.tex  reportv1.md
scripts/: generate_report_visuals.py  run_setup.py  setup.bat  setup_unix.sh
src/: __init__.py
src/analysis/: __init__.py  analysis_01_targets_df.py  analysis_02_programs1_basic_analysis.py  analysis_03_program1-df_detailedv1.py  analysis_04_programs2_detailed_analysis.py  analysis_05_programs_combined_detailed.py  analysis_06_advanced_esg_analysis.py  analysis_07_additional_esg_insights.py  analysis_08_comprehensive_esg_insights.py  analysis_09_program_sequencing_analysis.py  analysis_10_association_rule_mining.py  analysis_11_fastai_emissions_prediction.py  analysis_12_industry_segmented_emissions.py  analysis_13_gbm_industry_emissions.py  analysis_14_program_focused_gbm.py  analysis_15_plotsforIntReport.py  analysis_16_programs_combined_analysis.py  analysis_17_emissions_prediction.py
src/config/: paths.py
src/kaggle_scripts/: kaggle_esg_analysis_setup.py  kaggle_notebook_fastai_tabular_setup.py
src/tools/: fastai_feature_importance_example.py  get_fastai_docs.py  scrape_fastai_docs.py  scrape_fastai_tabular_docs.py
src/utils/: __init__.py  analysis_utils.py  data_utils.py  general_utils.py  path_setup.py  visualization_utils.py
