[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esg_analysis_project" # Choose a package name
version = "0.1.0"
dependencies = [
    "aiohttp==3.8.1",
    "aiosignal==1.2.0",
    "annotated-types==0.7.0",
    "asttokens==3.0.0",
    "async-timeout==4.0.1",
    "attrs==25.3.0",
    "Babel==2.8.0",
    "bcrypt==3.2.0",
    "beartype==0.21.0",
    "blinker==1.9.0",
    "blis==1.3.0",
    "catalogue==2.0.10",
    "certifi==2020.6.20",
    "chardet==4.0.0",
    "charset-normalizer==2.0.6",
    "click==8.1.8",
    "cloudpathlib==0.21.1",
    "cloudpickle==3.1.1",
    "colorama==0.4.4",
    "comm==0.2.2",
    "confection==0.1.5",
    "contourpy==1.3.1",
    "cryptography==3.4.8",
    "cycler==0.12.1",
    "cymem==2.0.11",
    "dash==2.18.2",
    "dash-core-components==2.0.0",
    "dash-html-components==2.0.0",
    "dash-table==5.0.0",
    "debugpy==1.8.12",
    "decorator==5.1.1",
    "distro==1.7.0",
    "exceptiongroup==1.2.2",
    "executing==2.2.0",
    "fastai==2.8.1",
    "fastcore==1.8.2",
    "fastdownload==0.0.7",
    "fasteners==0.14.1",
    "fastjsonschema==2.21.1",
    "fastprogress==1.0.3",
    "fasttransform==0.0.2",
    "filelock==3.17.0",
    "Flask==3.0.3",
    "Flask-SQLAlchemy==3.1.1",
    "fonttools==4.55.8",
    "frozenlist==1.2.0",
    "fsspec==2025.2.0",
    "future==0.18.2",
    "greenlet==3.2.1",
    "httplib2==0.20.2",
    "huggingface-hub==0.28.1",
    "idna==3.3",
    "importlib-metadata==4.6.4",
    "ipykernel==6.29.5",
    "ipython==8.32.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "Jinja2==3.1.5",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter_client==8.6.3",
    "jupyter_core==5.7.2",
    "keyring==23.5.0",
    "kiwisolver==1.4.8",
    "langcodes==3.5.0",
    "language_data==1.3.0",
    "lightgbm==4.5.0",
    "llvmlite==0.44.0",
    "lockfile==0.12.2",
    "Mako==1.1.3",
    "marisa-trie==1.2.1",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mlxtend==0.23.4",
    "more-itertools==8.10.0",
    "mpmath==1.3.0",
    "multidict==5.1.0",
    "murmurhash==1.0.13",
    "narwhals==1.25.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numba==0.61.2",
    "numpy==2.2.2",
    "oauthlib==3.2.0",
    "olefile==0.46",
    "opencv-python==4.11.0.86",
    "packaging==21.3",
    "pandas==2.2.3",
    "paramiko==2.9.3",
    "parso==0.8.4",
    "patsy==1.0.1",
    "pexpect==4.8.0",
    "Pillow==9.0.1",
    "platformdirs==4.3.6",
    "plotly==6.0.0",
    "plum-dispatch==2.5.7",
    "preshed==3.0.9",
    "prompt_toolkit==3.0.50",
    "protobuf==3.12.4",
    "psutil==6.1.1",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "pycairo==1.20.1",
    "pydantic==2.11.5",
    "pydantic_core==2.33.2",
    "Pygments==2.19.1",
    "PyGObject==3.42.1",
    "PyJWT==2.3.0",
    "pyOpenSSL==21.0.0",
    "pyparsing==2.4.7",
    "pyRFC3339==1.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2022.1",
    "pyxdg==0.27",
    "PyYAML==5.4.1",
    "pyzmq==26.2.1",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "reportlab==3.6.8",
    "requests==2.25.1",
    "retrying==1.3.4",
    "rich==14.0.0",
    "rpds-py==0.24.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "seaborn==0.13.2",
    "SecretStorage==3.3.1",
    "sentry-sdk==1.4.3",
    "shap==0.47.2",
    "shellingham==1.5.4",
    "six==1.16.0",
    "slicer==0.0.8",
    "smart-open==7.1.0",
    "spacy==3.8.7",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "SQLAlchemy==2.0.40",
    "srsly==2.5.1",
    "stack-data==0.6.3",
    "statsmodels==0.14.4",
    "stripe==12.0.1",
    "sympy==1.13.1",
    "tabulate==0.9.0",
    "thinc==8.3.6",
    "threadpoolctl==3.5.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
]
# Add other metadata like authors, description if you like

[tool.setuptools.packages.find]
where = ["src"] # Tell setuptools your package code is in src